package gp018328.com.gupaoedu.homework.pattern.factory.homework3.factorymethod;

/**
 * @author 王锋伟
 */
public interface IFactory {
    IProduct createProduct();
}
