package gp018328.com.gupaoedu.homework.pattern.factory.homework3.simplefactory;

/**
 * @author 王锋伟
 */
public interface IProduct {
    void product();
}
