package gp018328.com.gupaoedu.homework.pattern.factory.homework3.simplefactory;

/**
 * @author 王锋伟
 */
public class ProductB implements IProduct {

    @Override
    public void product() {
        System.out.println("It is ProducetB");
    }
}
